2016-10-08  Natalia Portillo  <claunia@claunia.com>

	* CloneCD.cs:
	* DiscImageChef.DiscImages.csproj: Adds support for CloneCD
	images, closes #57.

2016-10-07  Natalia Portillo  <claunia@claunia.com>

	* AppleNIB.cs:
	* DiscImageChef.DiscImages.csproj: Adds support for Apple
	nibble disk images.

2016-09-30  Natalia Portillo  <claunia@claunia.com>

	* NDIF.cs:
	* UDIF.cs: Add support for ADC compressed images.

2016-09-30  Natalia Portillo  <claunia@claunia.com>

	* NDIF.cs: Fail on StuffIt compressed images.

2016-09-30  Natalia Portillo  <claunia@claunia.com>

	* CHD.cs:
	* QCOW.cs:
	* UDIF.cs:
	* QCOW2.cs:
	* packages.config:
	* DiscImageChef.DiscImages.csproj: Updated SharpCompress to
	0.13.0

2016-09-07  Natalia Portillo  <claunia@claunia.com>

	* NDIF.cs:
	* UDIF.cs: Added new possible compression algorithms and field
	names from DiskImages.framework.

2016-09-06  Natalia Portillo  <claunia@claunia.com>

	* NDIF.cs:
	* DiscImageChef.DiscImages.csproj: Adds support for Apple NDIF
	images, closes #47

	* UDIF.cs:
	* DiskCopy42.cs: Try to get and use "vers" resource from the
	Resource Fork to get ImageApplication and its version.

2016-09-05  Natalia Portillo  <claunia@claunia.com>

	* CDRWin.cs: Show correct filename from filter.

2016-09-05  Natalia Portillo  <claunia@claunia.com>

	* GDI.cs:
	* VDI.cs:
	* VHD.cs:
	* DIM.cs:
	* BLU.cs:
	* QED.cs:
	* UDIF.cs:
	* QCOW.cs:
	* VHDX.cs:
	* Nero.cs:
	* QCOW2.cs:
	* CDRWin.cs:
	* CopyQM.cs:
	* CPCDSK.cs:
	* VMware.cs:
	* CDRDAO.cs:
	* TeleDisk.cs:
	* Apple2MG.cs:
	* Parallels.cs:
	* DiskCopy42.cs:
	* Alcohol120.cs:
	* ImagePlugin.cs:
	* BlindWrite5.cs:
	* BlindWrite4.cs:
	* ZZZRawImage.cs:
	* DiscImageChef.DiscImages.csproj: Added filters.

2016-09-02  Natalia Portillo  <claunia@claunia.com>

	* UDIF.cs:
	* packages.config:
	* README.txt:
	* LICENSE.txt:
	* ChangeLog.txt:
	* index.xml:
	* index.html:
	* DiscImageChef.DiscImages.csproj:
	* ns-Claunia.PropertyList.xml:
	* UID.xml:
	* UID.html:
	* NSSet.xml: